--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Noamnast
+title: natom
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   NoamnastのポートフォリオになれそうなSomething
@@ -54,3 +54,14 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
+
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      permalink: /articles/:title.html
+
+collections:
+  pages:
+    output: true
