とりあえずの完成

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ github_username:  jekyll
 # Build settings
 plugins:
   - jekyll-feed
-  
+  - jekyll-archives
+
 sass:
   sass_dir: _sass
   style: compressed
