--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: natom
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   NoamnastのポートフォリオになれそうなSomething
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://www.natom.work" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
